deploy/base/openehr-nodes/envida/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envida-portal
  namespace: dh-health
  labels:
    app: envida-portal
    ehr-node-name: envida
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envida-portal
  template:
    metadata:
      labels:
        app: envida-portal
    spec:
      containers:
      - name: envida-portal
        image: registry.prod.dh.unimaas.nl/docker-health/portal:latest
        ports:
        - containerPort: 3000
