deploy/base/openehr-nodes/envida/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envida-portal
spec:
  selector:
    app: envida-portal
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  type: ClusterIP
